<resources>
    <string name="app_name">TipCalcApp</string>
    <string name="tip_option_twenty">Amazing (20%)</string>
    <string name="tip_option_eighteen">Good (18%)</string>
    <string name="tip_option_fiveteen">OK (15%)</string>
    <string name="service_question">How was the service?</string>
    <string name="cost_hint">Cost of service</string>
    <string name="round_up_tip">Round up tip?</string>
    <string name="calculate_button">Calculate</string>
    <string name="tip_textView">Tip amount: %s</string>
</resources>